Update technotes docs and config

--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -1,5 +1,6 @@
 ---
-title: TN0004 - Authenticating requests with the Apollo Router
+title: Authenticating requests with the Apollo Router
+id: TN0004
 tags: [server, router, auth]
 ---
 
