--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Apollo tech notes
+title: Apollo Tech Notes
 ---
 
 This documentation set provides technical articles on specialized topics for Apollo tools and libraries. It is currently under development.
